# SoftDeskProject_P10

./: .gitignore  README.md  READme.md  index.html  manage.py  pyproject.toml  requirements.txt
SoftDeskProject_P10/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/templates/: login.html  signup.html
comments/: admin.py  models.py  permissions.py  serializers.py  views.py
config_API/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
issues/: admin.py  models.py  permissions.py  serializers.py  views.py
projects/: admin.py  mixins.py  models.py  permissions.py  serializers.py  tests.py  tests_projects.py  views.py
projects/templates/: swagger-ui.html
projects/templates/authentication/: login.html
